# djangautomate

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CONTRIBUTING.md  LISCENCE  README.md  pyproject.toml
.github/workflows/: docs.yml  release.yaml
djangautomate/: core.py  generators.py  utils.py
docs/: index.md  installation.md  mkdocs.yml  requirements.txt
docs/source/: api.rst  conf.py  contributing.rst  djangautomate.rst  index.rst  usage.rst
