[tool.poetry]
name = "djangautomate"
version = "0.1.0"
description = "Automates Django app, model, serializer, and view generation from SQLAlchemy tables"
authors = ["0rac130fD31phi <william.astley@algebraicwealth.com>"]
readme = "README.md"
packages = [{ include = "djangautomate" }]

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2"              # Django framework
sqlalchemy = "^2.0"          # ORM for database interactions
pandas = "^2.2.0"            # Data manipulation and analysis
numpy = "^1.26.0"            # Numerical computing

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
