[tool.poetry]
name = "djangautomate"
version = "0.1.0"
description = "Automates Django app, model, serializer, and view generation from SQLAlchemy tables"
authors = ["William R. Astley <william.astley@yourdomain.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pr1m8/djangautomate"
homepage = "https://djangautomate.readthedocs.io"
packages = [{ include = "djangautomate" }]

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2"
sqlalchemy = "^2.0"
pandas = "^2.2.0"
numpy = "^1.26.0"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx-rtd-theme = "*"
sphinx-autodoc-typehints = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
